# business_school_project

./: .gitignore  FinAss.py  README.md  TestingGround.py  main.py  project_intro.md  project_main.md
.devcontainer/: devcontainer.json
Aliaksei_F_personal_folder/: README.md  main.py  requirements.txt
Boris_K_project/: Invoice reader.py  Invoice_reader.py  README.md  invoice_data.csv
Dovydas_K_project/: drone_module.py  drone_script.py
Kornelijus R. Project/: LICENSE  Project_Kornelijus.py  README.md  my_apple.py  my_game.py  my_project.py  restaurant_map.html  restaurant_meetings.xlsx
Lukas_D_project/: README.md
Muzzamil_Heart Disease Risk Dashboard/: .gitignore  Onepage report.md  README.md
Rahat-Sultana/: Deep.py  README.md  academic_expenditure_01_22.csv  rahat.py
Raminta_Ker/: readme.md
aliaksei_f_folder/: .gitignore  OnePager.md  README.md  main.py  requirements.txt
dan-yang/: 1.py  Project_EV_Charging_Stations.py  ev_charging_stations.csv
depends/: PerFinData.csv  analysis.py  predict.py
emilijaDi/: README.md  analize.py  depression_analysis.py  (+4 more)
modestas_vatican_records/: .gitignore  README.md  app.py  main.py  pyproject.toml  setup.py  test.py
modestas_vatican_records/chatbot/: config.py  database.py  llm.py  reranking.py  session.py
modestas_vatican_records/chatbot/utils/: data_models.py  filter_documents.py  free_torch_cache.py  logging_config.py  text_utils.py
modestas_vatican_records/tests/: .env.example  inspect_chroma.py  test_llm.py
modestas_vatican_records/tests/core/: evaluation_prompt_template.py  evaluator_llm.py
(+165 files in other folders)
